--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     max-width: 300px;
+    margin: auto;
+    margin-top: 10%;
 }
 
 .snake-cell {
