--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
     max-width: 300px;
     margin: auto;
     margin-top: 15%;
@@ -45,11 +45,11 @@ main {
 
 .score {
     color: rgb(255, 255, 255);
-    position: absolute;
+    position: fixed;
     background-color: red;
     padding: 6px 40px;
     border-radius: 2px;
-    margin-top: 60px;
+    top: 10px;
     font-weight: bold;
 }
 
